<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/general_layout.linear">

    <TextView
        style="@style/my_text.title"
        android:text="@string/register"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />
    <LinearLayout
        style="@style/text_shape"
        >
        <TextView
            style="@style/my_text.mid"
            android:text="@string/username"
            />
        <EditText
            style="@style/my_text.small"
            android:id="@+id/et_username"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/text_shape"
        >
        <TextView
            style="@style/my_text.mid"
            android:text="@string/phone"
            />
        <EditText
            style="@style/my_text.small"
            android:inputType="phone"
            android:id="@+id/et_phone"
            android:maxLength="13"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/text_shape"
        >
        <TextView
            style="@style/my_text.mid"
            android:text="@string/mail"
            />
        <EditText
            style="@style/my_text.small"
            android:inputType="textEmailAddress"
            android:id="@+id/et_mail"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/text_shape"
        >
        <TextView
            style="@style/my_text.mid"
            android:text="@string/password"
            />
        <EditText
            style="@style/my_text.small"
            android:inputType="textPassword"
            android:id="@+id/et_password_reg"
            />
    </LinearLayout>
    <Button
        style="@style/button"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:id="@+id/btnRegister"
        />
    <Button
        style="@style/button"
        android:text="@string/returnMain"
        android:layout_marginTop="10dp"
        android:id="@+id/btnReturnMain"
        />

</LinearLayout>