<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/general_layout.linear"
    tools:context=".MainActivity">
    <TextView
        style="@style/my_text.title"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />
    <LinearLayout
        style="@style/text_shape"
        >
        <TextView
            style="@style/my_text.mid"
            android:text="@string/username"
            />
        <EditText
            style="@style/my_text.small"
            android:id="@+id/et_username"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/text_shape"
        >
        <TextView
            style="@style/my_text.mid"
            android:text="@string/password"
            />
        <EditText
            style="@style/my_text.small"
            android:inputType="textPassword"
            android:id="@+id/et_password"
            />
    </LinearLayout>
    <Button
        style="@style/button"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:id="@+id/btnLogin"
        />
    <Button
        style="@style/button"
        android:text="@string/new_account"
        android:layout_marginTop="10dp"
        android:id="@+id/btnNewAccount"
        />
    <Button
        style="@style/button"
        android:text="@string/forgot_pass"
        android:layout_marginTop="10dp"
        android:id="@+id/btnForgotPassword"
        />
</LinearLayout>